[gd_scene load_steps=4 format=3 uid="uid://bthpcl3gbouwc"]

[ext_resource type="Script" path="res://src/flowers/cut_flower.gd" id="1_3umnu"]
[ext_resource type="AudioStream" uid="uid://dircmtyt3bfx8" path="res://assets/Sounds/levitate.wav" id="2_bivbc"]
[ext_resource type="PackedScene" uid="uid://7dvw7728t334" path="res://src/shadows/shadow_generator.tscn" id="2_v0oe7"]

[node name="CutFlower" type="Area2D"]
script = ExtResource("1_3umnu")

[node name="DecayTimer" type="Timer" parent="."]

[node name="TransportDisk" type="Sprite2D" parent="."]

[node name="ShadowGenerator" parent="TransportDisk" instance=ExtResource("2_v0oe7")]

[node name="TransportDiskAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_bivbc")
